src/objects/DCEProfile__c.object
<CustomObject>
    <description>This object holds data relevant to the User on the Dementia Connect Portal. Mostly, it just contains whether or not they are (or have been) active.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DCE Profile</relationshipLabel>
        <relationshipName>DCEProfiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Contact__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Contact__r.FirstName&amp;&quot; &quot;&amp;Contact__r.LastName</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <label>DCE Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCEP{0000}</displayFormat>
        <label>DCE Profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCE Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>